# opengl-c-solarsystem

./: CMakeLists.txt  Makefile  README.md  main.c  tga.c  tga.h
texture/: earth.tga  jupiter.tga  mars.tga  mercury.tga  moon.tga  neptune.tga  saturn.tga  sun.tga  uranus.tga  venus.tga  venus_surface.tga
